WIP: issue-19 - fix styles order, wrap fillRef into useCallback

--- a/packages/slider/styles.css
+++ b/packages/slider/styles.css
@@ -1,62 +1,62 @@
 @import 'base.css';
 
-input[type=range]::-moz-focus-outer {
-  border: 0;
-}
-
 .root {
+  position: relative;
   width: 100%;
   height: 15px;
-  position: relative;
   padding: 5px 0;
   box-sizing: border-box;
+
+  & input[type=range]::-moz-focus-outer {
+    border: 0;
+  }
 }
 
 .slider {
-  -webkit-appearance: none;
-  outline: none;
   position: absolute;
   width: 100%;
   height: 15px;
   margin-top: -5px;
   background-color: transparent;
+  outline: none;
   cursor: pointer;
+  -webkit-appearance: none;
 
   &::-webkit-slider-thumb {
-    -webkit-appearance: none;
     width: 15px;
     height: 15px;
-    border-radius: 50%;
-    border: 5px solid var(--colorBlue);
     background-color: var(--colorWhite);
+    border: 5px solid var(--colorBlue);
+    border-radius: 50%;
     box-sizing: border-box;
+    -webkit-appearance: none;
   }
 
   &:disabled::-webkit-slider-thumb {
-    -webkit-appearance: none;
     border: 5px solid var(--colorGray);
+    -webkit-appearance: none;
   }
 }
 
 .slider::-moz-range-track {
-  -moz-appearance: none;
-  outline: 0;
   position: absolute;
   width: 100%;
   height: 15px;
   margin-top: -5px;
+  outline: none;
   pointer-events: all;
+  -moz-appearance: none;
 }
 
 .slider::-moz-range-thumb {
-  -moz-appearance: none;
   width: 15px;
   height: 15px;
-  border-radius: 50%;
-  border: 5px solid var(--colorBlue);
   background-color: var(--colorWhite);
+  border: 5px solid var(--colorBlue);
+  border-radius: 50%;
   box-sizing: border-box;
   outline: 0;
+  -moz-appearance: none;
 }
 
 .slider:disabled::-moz-range-thumb {
@@ -67,15 +67,15 @@ input[type=range]::-moz-focus-outer {
   position: absolute;
   width: 100%;
   height: 5px;
-  border-radius: 1px;
   background-color: var(--colorLightGray);
+  border-radius: 1px;
 }
 
 .fill {
   position: absolute;
   height: 5px;
-  border-radius: 1px;
   background-color: var(--colorBlue);
+  border-radius: 1px;
 }
 
 .disabled {
